test/expected/cli/shitbox_calc.out
=== precedence ===
14
=== parentheses and power ===
27
=== 128-bit in the default mood ===
1267650600228229401496703205376
=== signed 128-bit minimum ===
-170141183460469231731687303715884105728
-170141183460469231731687303715884105728
0
=== variable read ===
42
=== located parse error ===
shit: 1:4: error: Unfinished expression.
     1 |  1 +
       |     ^~ here.
note: An operand is missing.
=== located division by zero ===
shit: 1:6: error: Division by zero.
     1 |  5 / 0
       |       ^~ here.
note: The right operand evaluated to 0.
=== no expression ===
shit: 1:1: error: calc has no expression to evaluate.
     1 |  shitbox calc
       |  ^~~~~~~~~~~~ here.
note: Pass an expression such as `calc '2 + 2'`, read a pipe with `-p`, or enter the interactive prompt with `-i`.
rc=1
